Initialize project with FastAPI, PostgreSQL, Docker, and basic application structure:
- Added core project files including `Dockerfile`, `docker-compose.yml`, and `.env.example`.
- Implemented database models, migrations setup, and async database initialization with SQLAlchemy and Alembic.
- Developed foundational services, repositories, schemas, and routers for users, products, and orders.
- Integrated Telegram bot and YooKassa placeholders for payment processing.
- Added unit and integration tests using `pytest` and `httpx.AsyncClient`.
- Created README outlining project description, setup, and architecture.

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,19 @@
-# База данных
-POSTGRES_USER=veggi
-POSTGRES_PASSWORD=veggi
-POSTGRES_DB=veggi
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
-DATABASE_URL=postgresql+psycopg://veggi:veggi@db:5432/veggi
+# Пример настроек окружения для локальной разработки
+# Скопируйте этот файл в .env и подставьте значения
 
-# Redis
-REDIS_URL=redis://redis:6379/0
+# База данных PostgreSQL
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/cabbage
 
-# JWT
-JWT_SECRET=change_me
-JWT_ALG=HS256
-JWT_EXPIRES_SECONDS=604800
+# Настройки приложения
+APP_HOST=0.0.0.0
+APP_PORT=8000
+APP_ENV=dev
 
-# API
-API_HOST=0.0.0.0
-API_PORT=8000
-ENV=DEV
+# Telegram Bot
+TELEGRAM_BOT_TOKEN=replace_me
 
-# Бот
-BOT_TOKEN=000000:TEST
-BOT_MODE=POLLING
-PUBLIC_BASE_URL=https://example.com
-WEBHOOK_PATH=/bot/webhook
-
-# Сидинг
-LOAD_SEED=true
+# ЮKassa
+YOOKASSA_SHOP_ID=replace_me
+YOOKASSA_SECRET_KEY=replace_me
+YOOKASSA_RETURN_URL=http://localhost:8000/payments/return
+YOOKASSA_WEBHOOK_SECRET=replace_me
