Update README with comprehensive setup instructions and integrate Telegram bot into FastAPI app

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ APP_ENV=dev
 
 # Telegram Bot
 TELEGRAM_BOT_TOKEN=replace_me
+TELEGRAM_MODE=polling
+TELEGRAM_WEBHOOK_HOST=http://localhost:8000
+TELEGRAM_WEBHOOK_PATH=/telegram/webhook
+TELEGRAM_WEBHOOK_SECRET=replace_me
 
 # ЮKassa
 YOOKASSA_SHOP_ID=replace_me
