--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: postgres:16
     environment:
       POSTGRES_DB: cabbage
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: rootroot
     ports:
       - "5432:5432"
     volumes:
@@ -24,7 +24,7 @@ services:
       - db
     ports:
       - "8000:8000"
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+    command: ["uv", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
   telegram-bot:
     build: .
@@ -35,7 +35,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - db
-    command: ["python", "-m", "app.telegram.run_bot"]
+    command: ["uv", "run", "-m", "app.telegram.run_bot"]
 
 volumes:
   db_data:
