Add Alembic database migration support with initial schema and update Telegram bot configuration

--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 [alembic]
 script_location = alembic
 prepend_sys_path = .
-sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5432/cabbage
+# sqlalchemy.url намеренно не задаётся: Alembic берёт URL из переменной окружения DATABASE_URL
 
 [loggers]
 keys = root,sqlalchemy,alembic
