Remove debug user data dumping and update dependencies to pinned versions

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ APP_HOST=0.0.0.0
 APP_PORT=8000
 APP_ENV=dev
 
+# Mini App / Frontend
+FRONTEND_WEBAPP_URL=http://0.0.0.0:3000
+
 # Telegram Bot
 TELEGRAM_BOT_TOKEN=replace_me
 TELEGRAM_MODE=polling
