--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,66 @@
-fastapi>=0.115
-uvicorn[standard]>=0.30
-sqlalchemy>=2.0
-asyncpg>=0.29
-alembic>=1.13
-pydantic>=2.7
-pydantic-settings>=2.4
-aiogram>=3.13
-httpx>=0.27
-yookassa>=3.0
-python-dotenv>=1.0
-pytest>=8.0
-pytest-asyncio>=0.23
-isort>=5.13
-black>=24.4
-flake8>=7.0
-PyJWT>=2.9
+aiofiles==24.1.0
+aiogram==3.22.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+alembic==1.16.5
+annotated-types==0.7.0
+anyio==4.10.0
+asyncpg==0.30.0
+attrs==25.3.0
+black==25.9.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.3.0
+deprecated==1.2.18
+distro==1.9.0
+fastapi==0.117.1
+flake8==7.3.0
+frozenlist==1.7.0
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+isort==6.1.0
+magic-filter==1.0.12
+mako==1.3.10
+markupsafe==3.0.3
+mccabe==0.7.0
+multidict==6.6.4
+mypy-extensions==1.1.0
+netaddr==1.3.0
+packaging==25.0
+pathspec==0.12.1
+pip==24.0
+platformdirs==4.4.0
+pluggy==1.6.0
+propcache==0.3.2
+pycodestyle==2.14.0
+pydantic==2.11.9
+pydantic-core==2.33.2
+pydantic-settings==2.11.0
+pyflakes==3.4.0
+pygments==2.19.2
+pyjwt==2.10.1
+pytest==8.4.2
+pytest-asyncio==1.2.0
+python-dotenv==1.1.1
+pytokens==0.1.10
+pyyaml==6.0.3
+requests==2.32.5
+sniffio==1.3.1
+sqlalchemy==2.0.43
+starlette==0.48.0
+typing-extensions==4.15.0
+typing-inspection==0.4.1
+urllib3==2.5.0
+uvicorn==0.36.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
+wrapt==1.17.3
+yarl==1.20.1
+yookassa==3.7.1
