feat(logging): централизованное логирование dev/prod с ротацией
- Добавлен app/core/logging.py: setup_logging() для dev (DEBUG в консоль) и prod (WARNING+ в файл)
- Добавлен app/core/middleware.py: логирование всех HTTP-запросов с временем выполнения
- Обновлён app/main.py: вызов setup_logging() перед импортами, логирование lifespan событий
- Обновлён app/telegram/run_bot.py: логирование запуска бота
- Добавлено логирование в сервисы: order_service, user_service, payments
- Добавлено логирование в роутеры: tg_auth, deps (JWT/X-Telegram-Id)
- Добавлено логирование в handlers: start (команды, регистрация, ошибки)
- Расширен config.py: LOG_DIR, LOG_LEVEL
- Обновлён .env.example: переменные логирования
- Обновлён .gitignore: исключение logs/ и *.log
- Обновлён README.md: документация логирования, примеры, ротация

--- a/.env.example
+++ b/.env.example
@@ -9,18 +9,30 @@ APP_HOST=0.0.0.0
 APP_PORT=8000
 APP_ENV=dev
 
-# Mini App / Frontend
-FRONTEND_WEBAPP_URL=http://0.0.0.0:3000
+# Логирование
+LOG_DIR=./logs
+LOG_LEVEL=INFO
 
 # Telegram Bot
 TELEGRAM_BOT_TOKEN=replace_me
 TELEGRAM_MODE=polling
-TELEGRAM_WEBHOOK_HOST=http://localhost:8000
+TELEGRAM_WEBHOOK_HOST=https://example.com
 TELEGRAM_WEBHOOK_PATH=/telegram/webhook
 TELEGRAM_WEBHOOK_SECRET=replace_me
 
+# Mini App / Frontend
+FRONTEND_WEBAPP_URL=https://example.com/app/
+
+# JWT
+JWT_SECRET=replace_me
+JWT_ALGORITHM=HS256
+JWT_TTL_SECONDS=3600
+
+# WebApp initData TTL (сек)
+WEBAPP_AUTH_TTL_SECONDS=600
+
 # ЮKassa
-YOOKASSA_SHOP_ID=replace_me
-YOOKASSA_SECRET_KEY=replace_me
-YOOKASSA_RETURN_URL=http://localhost:8000/payments/return
-YOOKASSA_WEBHOOK_SECRET=replace_me
+YOOKASSA__SHOP_ID=replace_me
+YOOKASSA__SECRET_KEY=replace_me
+YOOKASSA__RETURN_URL=http://localhost:8000/payments/return
+YOOKASSA__WEBHOOK_SECRET=replace_me
